--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.18",
+    "classnames": "^2.5.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
     "next": "14.1.3",
