--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.5.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
+    "framer-motion": "^11.0.15",
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
